MA-12680 Gallery: no Gallery app in the app info list.
App info list capture the information from the <application>
in AndroidManifest.xml, which uses the camera icon and name
for gallery.

Change the android:icon to "@drawable/ic_launcher_gallery",
Change the android:label to "@string/gallery_label".

Change-Id: I319ba1e6f0aeda4da0f24d5ddd600ef7613c7b3d
Signed-off-by: brain <brain.han@nxp.com>
Reviewed-on: http://androidsource.ap.freescale.net/project/8167
Reviewed-by: Jindong Yue <jindong.yue@nxp.com>
Reviewed-by: guoyin.chen <guoyin.chen@nxp.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,8 +15,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_SMS" />
 
-    <application android:icon="@drawable/ic_launcher_camera"
-            android:label="@string/camera_label"
+    <application android:icon="@drawable/ic_launcher_gallery"
+            android:label="@string/gallery_label"
             android:taskAffinity="">
         <activity android:name="com.android.camera.GalleryPicker"
                 android:label="@string/gallery_picker_label"
