--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,6 +23,7 @@
                 android:configChanges="orientation|keyboardHidden"
                 android:icon="@drawable/ic_launcher_gallery"
                 android:clearTaskOnLaunch="true"
+                android:exported="true"
                 android:taskAffinity="android.task.pictures">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,6 +34,7 @@
         <activity android:name="com.android.camera.ImageGallery"
                 android:label="@string/gallery_label"
                 android:configChanges="orientation|keyboardHidden"
+                android:exported="true"
                 android:icon="@drawable/ic_launcher_gallery">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -76,6 +78,7 @@
             android:name="com.android.camera.CropImage"
             android:process=":CropImage"
             android:configChanges="orientation|keyboardHidden"
+            android:exported="true"
             android:label="@string/crop_label">
             <intent-filter android:label="@string/crop_label">
                 <action android:name="com.android.camera.action.CROP" />
@@ -88,6 +91,7 @@
         <activity android:name="com.android.camera.ViewImage"
                 android:label="@string/view_label"
                 android:screenOrientation="behind"
+                android:exported="true"
                 android:configChanges="orientation|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -99,6 +103,7 @@
                 android:label="@string/movieviewlabel"
                 android:screenOrientation="landscape"
                 android:configChanges="orientation|keyboardHidden"
+                android:exported="true"
                 android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
              <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -129,6 +134,7 @@
         </activity>
 
         <activity android:name="com.android.camera.GallerySettings"
+                android:exported="true"
                 android:label="@string/preferences_label">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -138,6 +144,7 @@
 
         <activity android:name="com.android.camera.Wallpaper"
                 android:label="@string/camera_setas_wallpaper"
+                android:exported="true"
                 android:icon="@drawable/ic_launcher_gallery">
             <intent-filter>
                 <action android:name="android.intent.action.ATTACH_DATA" />
@@ -148,6 +155,7 @@
 
         <activity android:name="com.android.camera.PickWallpaper"
                 android:label="@string/camera_pick_wallpaper"
+                android:exported="true"
                 android:icon="@drawable/ic_launcher_gallery">
             <intent-filter>
                 <action android:name="android.intent.action.SET_WALLPAPER" />
@@ -156,6 +164,7 @@
         </activity>
         <receiver android:name="com.android.camera.PhotoAppWidgetProvider"
                 android:label="@string/gadget_title"
+                android:exported="true"
                 android:icon="@drawable/ic_launcher_gallery">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
@@ -165,7 +174,8 @@
         </receiver>
 
         <!-- We configure a widget by asking to pick a photo, then crop it, and store the config internally -->
-        <activity android:name="com.android.camera.PhotoAppWidgetConfigure">
+        <activity android:name="com.android.camera.PhotoAppWidgetConfigure"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
             </intent-filter>
